crates/shipper/src/plan/snapshots/shipper__plan__tests__error_non_publishable_dep.snap
---
source: crates/shipper-plan/src/lib.rs
assertion_line: 1181
expression: "format!(\"{err:#}\")"
---
publishable package 'npdep' depends on non-publishable workspace member 'c'
