crates/shipper/src/plan/snapshots/shipper__plan__tests__package_selection_b.snap
---
source: crates/shipper-plan/src/lib.rs
assertion_line: 1161
expression: snapshot_of(&ws)
---
packages:
  - name: a
    version: 0.1.0
  - name: b
    version: 0.1.0
dependencies:
  a: []
  b:
    - a
skipped:
  - name: c
    version: 0.1.0
    reason: publish = false
  - name: d
    version: 0.1.0
    reason: publish = private-reg (registry not in list)
registry_name: crates-io
