crates/shipper/src/plan/snapshots/shipper__plan__tests__single_crate_plan.snap
---
source: crates/shipper-plan/src/lib.rs
assertion_line: 1089
expression: snapshot_of(&ws)
---
packages:
  - name: only
    version: 1.2.3
dependencies:
  only: []
skipped: []
registry_name: crates-io
